infrastructure/configs/traefik/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-ingress-dashboard
  namespace: traefik
  annotations:
    external-dns.kubernetes.io/hostname: traefik.local.mariosl.dev
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    cert-manager.io/cluster-issuer: cert-manager-cluster-issuer
spec:
  ingressClassName: traefik
  rules:
    - host: traefik.local.mariosl.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: traefik-helmrelease
                port:
                  number: 8080
  tls:
    - hosts:
        - traefik.local.mariosl.dev
      secretName: traefik-local-mariosl-dev-tls
